<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.currentweather.CurrentWeatherFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <TextView
                android:id="@+id/tv_city_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/text_city_name"
                android:textSize="16sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toTopOf="@+id/tv_temp"
                app:layout_constraintEnd_toStartOf="@+id/guide_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_temp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_temp"
                android:textSize="100sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_humidity"
                app:layout_constraintEnd_toStartOf="@+id/tv_temp_unit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_city_name" />

            <TextView
                android:id="@+id/tv_temp_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:alpha="0.9"
                android:text="@string/text_symbol_celsius"
                android:textSize="48sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_temp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_temp"
                app:layout_constraintTop_toTopOf="@+id/tv_temp"
                app:layout_constraintVertical_bias="0.8" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/text_humidity"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_navigate_to_whole_day_forecast"
                app:layout_constraintEnd_toStartOf="@+id/guide_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/tv_temp"
                app:layout_constraintTop_toBottomOf="@+id/tv_temp" />

            <TextView
                android:id="@+id/tv_navigate_to_whole_day_forecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/text_navigate_to_whole_day_forecast"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toTopOf="@+id/et_city_name"
                app:layout_constraintEnd_toStartOf="@+id/guide_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/tv_temp"
                app:layout_constraintTop_toBottomOf="@+id/tv_humidity" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_weather_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="tv_city_name, tv_temp, tv_temp_unit, tv_humidity, tv_navigate_to_whole_day_forecast" />

            <EditText
                android:id="@+id/et_city_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/et_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="60"
                android:maxLines="1"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/radio_group_temp_unit"
                app:layout_constraintEnd_toStartOf="@+id/guide_end"
                app:layout_constraintStart_toStartOf="@+id/guide_start" />

            <RadioGroup
                android:id="@+id/radio_group_temp_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/btn_search"
                app:layout_constraintEnd_toStartOf="@+id/guide_end"
                app:layout_constraintStart_toStartOf="@+id/guide_start">

                <RadioButton
                    android:id="@+id/radio_celsius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/text_celsius" />

                <RadioButton
                    android:id="@+id/radio_fahrenheit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/text_fahrenheit" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_search"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginBottom="32dp"
                android:text="@string/btn_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>