<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/currentWeatherFragment">

    <fragment
        android:id="@+id/currentWeatherFragment"
        android:name="com.example.basicweatherforecast.view.currentweather.CurrentWeatherFragment"
        android:label="Current Weather"
        tools:layout="@layout/fragment_current_weather">
        <action
            android:id="@+id/action_currentWeatherFragment_to_wholeDayForecastFragment"
            app:destination="@id/wholeDayForecastFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/wholeDayForecastFragment"
        android:name="com.example.basicweatherforecast.view.wholedayforecast.WholeDayForecastFragment"
        android:label="Whole-day Forecast"
        tools:layout="@layout/fragment_whole_day_forecast">

        <argument
            android:name="hourlyInfo"
            app:argType="com.example.basicweatherforecast.data.model.Hourly[]" />

        <argument
            android:name="temperatureUnit"
            app:argType="com.example.basicweatherforecast.data.model.TemperatureUnit" />
    </fragment>
</navigation>